unpackaged/main/default/objects/Training_Subscription_Account__c/Training_Subscription_Account__c.object-meta.xml
<CustomObject>
    <description>Accounts authorized to enroll under a Training Subscription</description>
    <label>Training Subscription Account</label>
    <nameField>
        <label>Training Subscription Account</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Subscription Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>