unpackaged/main/default/objects/Training_Subscription_Account__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Training Subscription Accounts</relationshipLabel>
    <relationshipName>Training_Subscription_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>