unpackaged/main/default/objects/Training_Subscription_Account__c/fields/Account_Exception_Notes__c.field-meta.xml
<CustomField>
    <fullName>Account_Exception_Notes__c</fullName>
    <label>Account Exception Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>