unpackaged/main/default/objects/Training_Subscription_Account__c/fields/Account_Swapped_Replaced__c.field-meta.xml
<CustomField>
    <fullName>Account_Swapped_Replaced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Swapped/Replaced?</label>
    <type>Checkbox</type>
</CustomField>