unpackaged/main/default/objects/Training_Subscription_Account__c/fields/Attended_Classes__c.field-meta.xml
<CustomField>
    <fullName>Attended_Classes__c</fullName>
    <description>The number of Attendees with a status of Attended</description>
    <inlineHelpText>The number of Attendees with a status of Attended</inlineHelpText>
    <label>Attended Classes</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>