unpackaged/main/default/objects/Training_Subscription_Account__c/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Billing_Account__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Billing Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Billing_Account__c</referenceTo>
    <relationshipLabel>Training Subscription Accounts</relationshipLabel>
    <relationshipName>Training_Subscription_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>