unpackaged/main/default/objects/Training_Subscription_Account__c/fields/Cancelled_Classes__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Classes__c</fullName>
    <label>Cancelled Classes</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>