unpackaged/main/default/objects/Training_Subscription_Account__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Training Subscription Accounts</relationshipLabel>
    <relationshipName>Subscription_Account</relationshipName>
    <type>Lookup</type>
</CustomField>