unpackaged/main/default/objects/Training_Subscription_Account__c/fields/Seats_Registered__c.field-meta.xml
<CustomField>
    <fullName>Seats_Registered__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Seats Registered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>