unpackaged/main/default/objects/Training_Subscription_Account__c/fields/Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>Status_Formula__c</fullName>
    <formula>IF( Account_Swapped_Replaced__c = TRUE, &quot;Inactive&quot;, Training_Subscription__r.Status_Formula__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>