unpackaged/main/default/objects/Training_Subscription_Account__c/fields/Subscription_Account_No__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Account_No__c</fullName>
    <formula>Training_Subscription__r.Term_Number_Only__c &amp; &quot;-&quot; &amp; TEXT( Term_Account_Number__c )</formula>
    <label>Subscription Account #</label>
    <type>Text</type>
</CustomField>