unpackaged/main/default/objects/Training_Subscription_Account__c/fields/Subscription_Description__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Description__c</fullName>
    <label>Subscription Description</label>
    <type>TextArea</type>
</CustomField>