unpackaged/main/default/objects/Training_Subscription_Account__c/fields/Term_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Term_Account_Number__c</fullName>
    <label>Term Account Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>