unpackaged/main/default/objects/Training_Subscription_Account__c/fields/Term_Exception_Notes__c.field-meta.xml
<CustomField>
    <fullName>Term_Exception_Notes__c</fullName>
    <label>Term Exception Notes</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>