unpackaged/main/default/objects/Training_Subscription_Account__c/fields/Term_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Term_Start_Date__c</fullName>
    <formula>Training_Subscription__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term Start Date</label>
    <type>Date</type>
</CustomField>