unpackaged/main/default/objects/Training_Subscription_Account__c/fields/Term_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Term_Termination_Date__c</fullName>
    <formula>Training_Subscription__r.End_Date_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term End Date</label>
    <type>Date</type>
</CustomField>