unpackaged/main/default/objects/Training_Subscription_Account__c/fields/Training_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Training_Subscription__c</fullName>
    <label>Training Subscription Term</label>
    <referenceTo>Training_Subscription_Term__c</referenceTo>
    <relationshipLabel>Training Subscription Accounts</relationshipLabel>
    <relationshipName>Subscription_Sub_Accts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>