unpackaged/main/default/objects/Training_Subscription_Account__c/fields/Training_Subscription_Account_18__c.field-meta.xml
<CustomField>
    <fullName>Training_Subscription_Account_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Subscription Account (18)</label>
    <type>Text</type>
</CustomField>