unpackaged/main/default/objects/Training_Subscription_Account__c/fields/TST_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>TST_Record_Type__c</fullName>
    <description>The Record Type of the related Training Subscription Term.</description>
    <formula>Training_Subscription__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Record Type of the related Training Subscription Term.</inlineHelpText>
    <label>TST Record Type</label>
    <type>Text</type>
</CustomField>