unpackaged/main/default/objects/Training_Subscription_Account__c/fields/WFR_Fired__c.field-meta.xml
<CustomField>
    <fullName>WFR_Fired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WFR Fired</label>
    <type>Checkbox</type>
</CustomField>