unpackaged/main/default/objects/Training_Subscription_Account__c/recordTypes/X20_Group.recordType-meta.xml
<RecordType>
    <fullName>X20_Group</fullName>
    <active>true</active>
    <label>20 Group</label>
</RecordType>